--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculatrice</title>
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="./public/css/app.css">
 </head>
 <body>
 
@@ -40,7 +40,6 @@
         <button value="=" class="operator">=</button>
       </div>
     </div>
-
   </div>
 
 
